--- a/TracteurXtreme/App.xaml
+++ b/TracteurXtreme/App.xaml
@@ -3,6 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:TracteurXtreme"
-    StartupUri="MainWindow.xaml">
+    StartupUri="/MenuPrincipal.xaml">
     <Application.Resources />
 </Application>
