--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -21,8 +21,20 @@
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1.5*"></RowDefinition>
         </Grid.RowDefinitions>
-
-        <Button Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " Foreground="White" FontSize="24" FontFamily="Broadway" Margin="150,0,0,0">
+        <Label Grid.ColumnSpan="3" x:Name="titreJeu" Content="Rodeo Tracteur Xtreme" HorizontalAlignment="Center" VerticalAlignment="Top" 
+               Margin="0,100,0,0" FontFamily="Gill Sans Ultra Bold Condensed" FontSize="48">
+            <Label.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFD61414" Offset="0.873"/>
+                    <GradientStop Color="#FF3A0808" Offset="0.147"/>
+                </LinearGradientBrush>
+            </Label.Foreground>
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
+        <Button Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " 
+                Foreground="White" FontSize="24" FontFamily="Broadway" Margin="150,0,0,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD61414" Offset="0.46"/>
@@ -30,7 +42,8 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="0,0,150,0">
+        <Button Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
+                FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="0,0,150,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD61414" Offset="0.46"/>
