--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="1.5*"></RowDefinition>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="3" x:Name="titreJeu" Content="Rodeo Tracteur Xtreme" HorizontalAlignment="Center" VerticalAlignment="Top" 
-               Margin="0,100,0,0" FontFamily="Gill Sans Ultra Bold Condensed" FontSize="48">
+               Margin="0,150,0,0" FontFamily="Gill Sans Ultra Bold Condensed" FontSize="48">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD61414" Offset="0.873"/>
@@ -34,7 +34,7 @@
             </Label.Effect>
         </Label>
         <Button Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " 
-                Foreground="White" FontSize="24" FontFamily="Broadway" Margin="150,0,0,0">
+                Foreground="White" FontSize="24" FontFamily="Broadway" Margin="100,0,50,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD61414" Offset="0.46"/>
@@ -43,7 +43,7 @@
             </Button.Background>
         </Button>
         <Button Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
-                FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="0,0,150,0">
+                FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="50,0,100,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFD61414" Offset="0.46"/>
@@ -51,6 +51,13 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
+        <ComboBox Grid.Column="1" Grid.Row="1" 
+                  Foreground="#FF9D0F0F" BorderBrush="#FF9D0F0F" Background="#FF9D0F0F" Margin="5,0,5,0" Height="35">
+            <ComboBoxItem Content="Piste Bulle Rose Xtreme Remastered"/>
+            <ComboBoxItem Content="Piste Demon du Feu Xtreme"/>
+            <ComboBoxItem Content="Piste Ferme Original"/>
+            <ComboBoxItem Content="Piste Aventure Aquatique Xtreme"/>
+        </ComboBox>
 
     </Grid>
 </Window>
