--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="540" Width="960"
         WindowState="Maximized"
         KeyDown="Window_KeyDown">
-    <Canvas Background="#FF9A5322">
+    <Canvas x:Name="canvasPiste" Background="#FF9A5322">
         <Button Content="retour au menu" Canvas.Left="52" Canvas.Top="31" Click="Button_Click"/>
         <Rectangle x:Name="rectTracteur" Height="50" Canvas.Left="95" Canvas.Top="166" Width="50">
             <Rectangle.Fill>
