--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="540" Width="960"
         WindowState="Maximized"
+        KeyUp="Window_KeyUp"
         KeyDown="Window_KeyDown">
     <Canvas x:Name="canvasPiste">
         <Canvas.Background>
