--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -16,7 +16,7 @@
         <Button Content="retour au menu" Canvas.Left="52" Canvas.Top="31" Click="Button_Click"/>
         <Rectangle x:Name="rectTracteur" Height="50" Canvas.Left="95" Canvas.Top="166" Width="70">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="/img/imgTracteurs/gauche/tracteurNoirJoueur_gauche.png"/>
+                <ImageBrush x:Name="imgTracteur" ImageSource="/img/imgTracteurs/gauche/tracteurNoirJoueur_gauche.png"/>
             </Rectangle.Fill>
         </Rectangle>
         <Rectangle x:Name="murTest" Height="200" Stroke="Black"  Width="80" 
