--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -34,7 +34,7 @@
                 <DropShadowEffect/>
             </Label.Effect>
         </Label>
-        <Button Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " 
+        <Button x:Name="butJouerMulti" Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " 
                 Foreground="White" FontSize="24" FontFamily="Broadway" Margin="100,0,50,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -43,7 +43,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
+        <Button x:Name="butJouerSolo" Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
                 FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="50,0,100,0">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
