--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -1,31 +1,103 @@
-﻿<Window x:Class="TracteurXtreme.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TracteurXtreme"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="540" Width="960"
-        WindowState="Maximized"
-        KeyUp="Window_KeyUp"
-        KeyDown="Window_KeyDown">
+﻿<Window
+    x:Class="TracteurXtreme.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TracteurXtreme"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="960"
+    Height="540"
+    KeyDown="Window_KeyDown"
+    KeyUp="Window_KeyUp"
+    WindowState="Maximized"
+    mc:Ignorable="d">
     <Canvas x:Name="canvasPiste">
         <Canvas.Background>
-            <ImageBrush ImageSource="/img/backcircuit1.png"/>
+            <ImageBrush ImageSource="/img/backcircuit1.png" />
         </Canvas.Background>
-        <Button Content="retour au menu" Canvas.Left="52" Canvas.Top="31" Click="Button_Click"/>
-        <Rectangle x:Name="rectTracteur" Height="50" Canvas.Left="95" Canvas.Top="166" Width="70">
+        <Button
+            Canvas.Left="52"
+            Canvas.Top="31"
+            Click="Button_Click"
+            Content="retour au menu" />
+        <Rectangle
+            x:Name="rectTracteur"
+            Canvas.Left="80"
+            Canvas.Top="100"
+            Width="70"
+            Height="50">
             <Rectangle.Fill>
-                <ImageBrush x:Name="imgTracteur" ImageSource="/img/imgTracteurs/gauche/tracteurNoirJoueur_gauche.png"/>
+                <ImageBrush x:Name="imgTracteur" ImageSource="/img/imgTracteurs/gauche/tracteurNoirJoueur_gauche.png" />
             </Rectangle.Fill>
         </Rectangle>
-        <Rectangle x:Name="murTest" Height="200" Stroke="Black"  Width="80" 
-                   HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="258" Canvas.Top="131"/>
-        <Label Name="labPauseJeu" Content="" FontFamily="Arial Black" FontSize="36" Foreground="#FF52BFFF" 
-               HorizontalAlignment="Right" VerticalAlignment="Bottom"
-               Canvas.Top="0" Canvas.Right="0" Margin="0,15,20,0">
+
+        <Rectangle
+            x:Name="rectTracteur1"
+            Canvas.Left="480"
+            Canvas.Top="75"
+            Width="70"
+            Height="50" RenderTransformOrigin="1.043,1.5">
+            <Rectangle.Fill>
+                <ImageBrush x:Name="imgTracteur1" ImageSource="/img/imgTracteurs/gauche/tracteurBleu_gauche.png" />
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Rectangle
+            x:Name="rectTracteur2"
+            Canvas.Left="697"
+            Canvas.Top="75"
+            Width="70"
+            Height="50" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <ImageBrush x:Name="imgTracteur2" ImageSource="/img/imgTracteurs/gauche/tracteurJaune_gauche.png" />
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Rectangle
+            x:Name="rectTracteur3"
+            Canvas.Left="697"
+            Canvas.Top="206"
+            Width="70"
+            Height="50" RenderTransformOrigin="0.65,1.499" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <ImageBrush x:Name="imgTracteur3" ImageSource="/img/imgTracteurs/gauche/tracteurOrange_gauche.png" />
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Rectangle
+            x:Name="rectTracteur4"
+            Canvas.Left="480"
+            Canvas.Top="206"
+            Width="70"
+            Height="50">
+            <Rectangle.Fill>
+                <ImageBrush x:Name="imgTracteur4" ImageSource="/img/imgTracteurs/gauche/tracteurRouge_gauche.png" />
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Rectangle
+            x:Name="murTest"
+            Canvas.Left="258"
+            Canvas.Top="131"
+            Width="80"
+            Height="200"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Stroke="Black" />
+        <Label
+            Name="labPauseJeu"
+            Canvas.Top="0"
+            Canvas.Right="0"
+            Margin="0,15,20,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Content=""
+            FontFamily="Arial Black"
+            FontSize="36"
+            Foreground="#FF52BFFF">
             <Label.Effect>
-                <DropShadowEffect/>
+                <DropShadowEffect />
             </Label.Effect>
         </Label>
     </Canvas>
