--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -42,6 +42,11 @@
                     <GradientStop Color="Black" Offset="1"/>
                 </LinearGradientBrush>
             </Button.Background>
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </Button.Resources>
         </Button>
         <Button x:Name="butJouerSolo" Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
                 FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="50,0,100,0">
@@ -51,6 +56,11 @@
                     <GradientStop Color="Black" Offset="1"/>
                 </LinearGradientBrush>
             </Button.Background>
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="15"/>
+                </Style>
+            </Button.Resources>
         </Button>
         <ComboBox x:Name="cbChoixNiveau" Grid.Column="1" Grid.Row="1" 
                   Foreground="#FF9D0F0F" BorderBrush="#FF9D0F0F" Background="#FF9D0F0F" Margin="5,0,5,0" Height="35">
