--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -1,73 +1,104 @@
-﻿
-<Window x:Class="TracteurXtreme.MenuPrincipal"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TracteurXtreme"
-        mc:Ignorable="d"
-        Title="MenuPrincipal" Height="540" Width="960"
-        WindowState="Maximized">
+﻿<Window
+    x:Class="TracteurXtreme.MenuPrincipal"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TracteurXtreme"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MenuPrincipal"
+    Width="960"
+    Height="540"
+    WindowState="Maximized"
+    mc:Ignorable="d">
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="/img/race_tracteur.png"/>
+            <ImageBrush ImageSource="/img/race_tracteur.png" />
         </Grid.Background>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="3*"></ColumnDefinition>
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition />
+            <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="6*"></RowDefinition>
-            <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="1.5*"></RowDefinition>
+            <RowDefinition Height="6*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1.5*" />
         </Grid.RowDefinitions>
-        <Label Grid.ColumnSpan="3" x:Name="titreJeu" Content="Rodeo Tracteur Xtreme" HorizontalAlignment="Center" VerticalAlignment="Top" 
-               Margin="0,150,0,0" FontFamily="Gill Sans Ultra Bold Condensed" FontSize="48">
+        <Label
+            x:Name="titreJeu"
+            Grid.ColumnSpan="3"
+            Margin="0,150,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Rodeo Tracteur Xtreme"
+            FontFamily="Gill Sans Ultra Bold Condensed"
+            FontSize="48">
             <Label.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFD61414" Offset="0.873"/>
-                    <GradientStop Color="#FF3A0808" Offset="0.147"/>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.873" Color="#FFD61414" />
+                    <GradientStop Offset="0.147" Color="#FF3A0808" />
                 </LinearGradientBrush>
             </Label.Foreground>
             <Label.Effect>
-                <DropShadowEffect/>
+                <DropShadowEffect />
             </Label.Effect>
         </Label>
-        <Button x:Name="butJouerMulti" Grid.Column="0" Grid.Row="1" Content=" Jouer Multijoueur " 
-                Foreground="White" FontSize="24" FontFamily="Broadway" Margin="100,0,50,0">
+        <Button
+            x:Name="butJouerMulti"
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="100,0,50,0"
+            Content=" Jouer Multijoueur "
+            FontFamily="Broadway"
+            FontSize="24"
+            Foreground="White">
             <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFD61414" Offset="0.46"/>
-                    <GradientStop Color="Black" Offset="1"/>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.46" Color="#FFD61414" />
+                    <GradientStop Offset="1" Color="Black" />
                 </LinearGradientBrush>
             </Button.Background>
             <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="15"/>
+                    <Setter Property="CornerRadius" Value="15" />
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="butJouerSolo" Grid.Column="2" Grid.Row="1" Content=" Jouer Solo " Foreground="White" 
-                FontSize="24" FontFamily="Broadway" Click="Button_Click" Margin="50,0,100,0">
+        <Button
+            x:Name="butJouerSolo"
+            Grid.Row="1"
+            Grid.Column="2"
+            Margin="50,0,100,0"
+            Click="Button_Click"
+            Content=" Jouer Solo "
+            FontFamily="Broadway"
+            FontSize="24"
+            Foreground="White">
             <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFD61414" Offset="0.46"/>
-                    <GradientStop Color="Black" Offset="1"/>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.46" Color="#FFD61414" />
+                    <GradientStop Offset="1" Color="Black" />
                 </LinearGradientBrush>
             </Button.Background>
             <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="15"/>
+                    <Setter Property="CornerRadius" Value="15" />
                 </Style>
             </Button.Resources>
         </Button>
-        <ComboBox x:Name="cbChoixNiveau" Grid.Column="1" Grid.Row="1" 
-                  Foreground="#FF9D0F0F" BorderBrush="#FF9D0F0F" Background="#FF9D0F0F" Margin="5,0,5,0" Height="35">
-            <ComboBoxItem x:Name="cbNiveauRose" Content="Piste Bulle Rose Xtreme Remastered"/>
-            <ComboBoxItem x:Name="cbNiveauFeu" Content="Piste Demon du Feu Xtreme"/>
-            <ComboBoxItem x:Name="cbNiveauFerme" Content="Piste Ferme Original"/>
-            <ComboBoxItem x:Name="cbNiveauAquatique" Content="Piste Aventure Aquatique Xtreme"/>
+        <ComboBox
+            x:Name="cbChoixNiveau"
+            Grid.Row="1"
+            Grid.Column="1"
+            Height="35"
+            Margin="5,0,5,0"
+            Background="#FF9D0F0F"
+            BorderBrush="#FF9D0F0F"
+            Foreground="#FF9D0F0F">
+            <ComboBoxItem x:Name="cbNiveauRose" Content="Piste Bulle Rose Xtreme Remastered" />
+            <ComboBoxItem x:Name="cbNiveauFeu" Content="Piste Demon du Feu Xtreme" />
+            <ComboBoxItem x:Name="cbNiveauFerme" Content="Piste Ferme Original" />
+            <ComboBoxItem x:Name="cbNiveauAquatique" Content="Piste Aventure Aquatique Xtreme" />
         </ComboBox>
 
     </Grid>
