--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -42,7 +42,7 @@
             Width="50"
             Height="65" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.Fill>
-                <ImageBrush x:Name="imgTracteur4" ImageSource="/img/imgTracteurs/bas/tracteurRouge_bas.png" />
+                <ImageBrush x:Name="imgFillTracteurRouge" ImageSource="/img/imgTracteurs/bas/tracteurRouge_bas.png" />
             </Rectangle.Fill>
         </Rectangle>
         <Label
