gerer boolen pause et difficulte niveau

--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -95,10 +95,10 @@
             Background="#FF9D0F0F"
             BorderBrush="#FF9D0F0F"
             Foreground="#FF9D0F0F">
-            <ComboBoxItem x:Name="cbNiveauRose" Content="Piste Bulle Rose Xtreme Remastered" />
-            <ComboBoxItem x:Name="cbNiveauFeu" Content="Piste Demon du Feu Xtreme" />
-            <ComboBoxItem x:Name="cbNiveauFerme" Content="Piste Ferme Original" />
-            <ComboBoxItem x:Name="cbNiveauAquatique" Content="Piste Aventure Aquatique Xtreme" />
+            <ComboBoxItem x:Name="cbNiveauRose" Content="Piste Bulle Rose Xtreme Remastered (Facile)" />
+            <ComboBoxItem x:Name="cbNiveauFeu" Content="Piste Demon du Feu Xtreme (Infernal)" />
+            <ComboBoxItem x:Name="cbNiveauFerme" Content="Piste Ferme Original (Normal)" />
+            <ComboBoxItem x:Name="cbNiveauAquatique" Content="Piste Aventure Aquatique Xtreme (Difficile)" />
         </ComboBox>
 
     </Grid>
