--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -74,8 +74,11 @@
         </Label>
         <Label x:Name="labChrono" Content="00:00.000" Canvas.Left="443" Background="#FFDEB5B5" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" FontWeight="Bold"/>
         <Rectangle x:Name="rectLigneArrive" Height="47" Canvas.Left="21" Stroke="Black" Canvas.Top="262" Width="141" Fill="#66000000"/>
-        <Label x:Name="labDepart" Content="" Canvas.Left="376" Canvas.Top="186" Height="152" Width="208"/>
-
+        <Label x:Name="labDepart" Content="Ready" Canvas.Left="391" Canvas.Top="191" FontSize="100" Foreground="#FFAA0000" Width="300" Height="150" FontFamily="Forte" FontWeight="Bold">
+            <Label.Background>
+                <ImageBrush ImageSource="/img/drapeauxCourse/racingFlag4.png"/>
+            </Label.Background>
+        </Label>
 
     </Canvas>
 </Window>
