--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -73,7 +73,7 @@
             </Label.Effect>
         </Label>
         <Label x:Name="labChrono" Content="00:00.000" Canvas.Left="443" Background="#FFDEB5B5" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" FontWeight="Bold"/>
-        <Rectangle x:Name="rectLigneArrive" Height="47" Canvas.Left="21" Stroke="Black" Canvas.Top="262" Width="141" Fill="#66000000"/>
+        <Rectangle x:Name="rectLigneArrive" Height="1" Canvas.Left="21" Stroke="Black" Canvas.Top="272" Width="141" Fill="#66000000" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label x:Name="labDepart" Content="Ready" Canvas.Left="391" Canvas.Top="191" FontSize="100" Foreground="#FFAA0000" Width="300" Height="150" FontFamily="Forte" FontWeight="Bold">
             <Label.Background>
                 <ImageBrush ImageSource="/img/drapeauxCourse/racingFlag4.png"/>
