--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -73,12 +73,25 @@
             </Label.Effect>
         </Label>
         <Label x:Name="labChrono" Content="00:00.000" Canvas.Left="443" Background="#FFDEB5B5" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" FontWeight="Bold"/>
-        <Rectangle x:Name="rectLigneArrive" Height="1" Canvas.Left="21" Stroke="Black" Canvas.Top="272" Width="141" Fill="#66000000" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle x:Name="rectLigneArrive" Height="20" Canvas.Left="21" Stroke="Black" Canvas.Top="272" Width="141" Fill="#66000000" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label x:Name="labDepart" Content="Ready" Canvas.Left="391" Canvas.Top="191" FontSize="100" Foreground="#FFAA0000" Width="300" Height="150" FontFamily="Forte" FontWeight="Bold">
             <Label.Background>
                 <ImageBrush ImageSource="/img/drapeauxCourse/racingFlag4.png"/>
             </Label.Background>
         </Label>
+        <Button Content="Rejouer (R)" Canvas.Left="19" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" FontWeight="Bold" Width="120" Height="25" Click="Button_Click_1">
+            <Button.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.46" Color="#FFD61414" />
+                    <GradientStop Offset="1" Color="Black" />
+                </LinearGradientBrush>
+            </Button.Background>
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="7" />
+                </Style>
+            </Button.Resources>
+        </Button>
 
     </Canvas>
 </Window>
