--- a/TracteurXtreme/MenuPrincipal.xaml
+++ b/TracteurXtreme/MenuPrincipal.xaml
@@ -43,18 +43,23 @@
                 <DropShadowEffect />
             </Label.Effect>
         </Label>
-        
-        <Grid x:Name="gridDansGrid" Grid.Row="1" Grid.Column="0">
+
+        <Grid
+            x:Name="gridDansGrid"
+            Grid.Row="1"
+            Grid.Column="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Button
                 x:Name="butQuitter"
+                Margin="20,10,20,10"
+                Click="butQuitter_Click"
                 Content=" Quitter le Jeu "
                 FontFamily="Broadway"
                 FontSize="20"
-                Foreground="White" Click="butQuitter_Click" Margin="20,10,20,10">
+                Foreground="White">
                 <Button.Background>
                     <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                         <GradientStop Offset="0.46" Color="#FFD61414" />
@@ -69,11 +74,13 @@
             </Button>
             <Button
                 x:Name="butRegles"
-                Content=" Regles du Jeu "
                 Grid.Column="1"
+                Margin="20,10,20,10"
+                Click="butRegles_Click"
+                Content=" Regles du Jeu "
                 FontFamily="Broadway"
                 FontSize="20"
-                Foreground="White" Click="butRegles_Click" Margin="20,10,20,10">
+                Foreground="White">
                 <Button.Background>
                     <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
                         <GradientStop Offset="0.46" Color="#FFD61414" />
@@ -124,6 +131,18 @@
             <ComboBoxItem x:Name="cbNiveauAquatique" Content="Piste Aventure Aquatique Xtreme (Difficile)" />
             <ComboBoxItem x:Name="cbNiveauFeu" Content="Piste Demon du Feu Xtreme (Infernal)" />
         </ComboBox>
+        <Border
+            x:Name="borderRegles"
+            Grid.ColumnSpan="3"
+            Margin="300,220,300,10"
+            Padding="5"
+            Background="AntiqueWhite"
+            BorderBrush="#FF9D0F0F"
+            BorderThickness="5"
+            CornerRadius="15"
+            Visibility="Collapsed">
+            <TextBlock x:Name="txtblockRegles" Text="   Règles du jeu : &#10;&#10;   C'est une course entre tracteurs." />
+        </Border>
 
     </Grid>
 </Window>
