--- a/TracteurXtreme/MainWindow.xaml
+++ b/TracteurXtreme/MainWindow.xaml
@@ -22,7 +22,7 @@
         <Button
             Canvas.Left="19"
             Canvas.Top="11"
-            Click="Button_Click"
+            Click="ButtonRetour_Click"
             Content="Retour au menu" Foreground="White" FontWeight="Bold" HorizontalAlignment="Center" Height="25" VerticalAlignment="Top" Width="120">
             <Button.Background>
                 <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -72,7 +72,14 @@
                 <DropShadowEffect />
             </Label.Effect>
         </Label>
-        <Label x:Name="labChrono" Content="00:00.000" Canvas.Left="443" Background="#FFDEB5B5" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" FontWeight="Bold"/>
+        <Label x:Name="labChrono" Content="00:00.000" Canvas.Left="443" FontSize="14" VerticalAlignment="Top" HorizontalAlignment="Left" FontWeight="Bold" Foreground="White">
+            <Label.Background>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Offset="0.46" Color="#FFD61414" />
+                    <GradientStop Offset="1" Color="Black" />
+                </LinearGradientBrush>
+            </Label.Background>
+        </Label>
         <Rectangle x:Name="rectLigneArrive" Height="20" Canvas.Left="21" Canvas.Top="272" Width="141" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label x:Name="labDepart" Content="" Canvas.Left="391" Canvas.Top="191" FontSize="100" Foreground="#FFAA0000" Width="300" Height="150" FontFamily="Forte" FontWeight="Bold" Background="{x:Null}"/>
         <Button Content="Rejouer (R)" Canvas.Left="19" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" FontWeight="Bold" Width="120" Height="25" Click="Button_Click_1">
@@ -96,6 +103,16 @@
         <Rectangle x:Name="rectBonusDiesel" Height="35" Canvas.Left="598" Canvas.Top="27" Width="40" Visibility="Hidden" Tag="bonus" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/img/bonus/bonus_diesel.png"/>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle x:Name="rectBonusDesRoues" Height="50" Canvas.Left="812" Canvas.Top="252" Width="60" Visibility="Hidden" Tag="bonus" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <ImageBrush ImageSource="/img/bonus/bonus_desRoues.png"/>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle x:Name="rectBonusChamps" Height="35" Canvas.Left="95" Canvas.Top="335" Width="50" Visibility="Hidden" Tag="bonus" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle.Fill>
+                <ImageBrush ImageSource="/img/bonus/bonus_champs.png"/>
             </Rectangle.Fill>
         </Rectangle>
 
